# gexport

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: release.yml
init/: hook.bash  hook.zsh  init.sh
src/: args.rs  env_vars.rs  main.rs  utils.rs
src/env_vars/: encode.rs  parse.rs  writer.rs
