[package]
name = "gexport"
version = "1.1.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/Flachz/gexport"
authors = ["Thomas Strom"]
description = "Manage and synchronize environment variables between interactive shell sessions for Bash and Zsh."
categories = ["command-line-utilities"]
keywords = ["export", "bash", "zsh", "environment", "variables"]

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
clap-stdin = "0.6.0"
colored = "3.0.0"
regex = "1.11.1"
itertools = "0.14.0"
fs2 = "0.4.3"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
